--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,8 +2,7 @@
 layout: layouts/base.njk
 templateClass: tmpl-post
 ---
-<h1>{{ title }}</h1>
 
 {{ content | safe }}
 
-<p><a href="{{ '/' | url }}">← Home</a></p>
+<p class="content-nav"><a href="{{ '/' | url }}">← Home</a></p>
