--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -1,15 +1,19 @@
 
-<ol reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
+<ol class="post-list">
 {% for post in postslist | reverse %}
-  <li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-    <a href="{{ post.url | url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-    <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
-    {% for tag in post.data.tags %}
-      {%- if collections.tagList.indexOf(tag) != -1 -%}
-      {% set tagUrl %}/tags/{{ tag }}/{% endset %}
-      <a href="{{ tagUrl | url }}" class="tag">{{ tag }}</a>
-      {%- endif -%}
-    {% endfor %}
+  <li class="post-list__item {% if post.url == url %} post-list-item--active{% endif %}">
+  <h2 class="post-list__title post-title">
+    <a href="{{ post.url | url }}" class="post-list__link">
+        {% if post.data.title %}
+          {{ post.data.title }}
+        {% else %}{% endif %}
+    </a>
+  </h2>
+  <time class="post-list__date post-date" datetime="{{ post.date | htmlDateString }}">
+    {{ post.date | readableDate }}</time>
+    <p class="post-list__excerpt">{% excerpt post %} </p>
+  <a class="post-list__read-more" href="{{ post.url | url }}"
+   aria-label="Read more on {{ post.data.title }}">Read more →</a>
   </li>
 {% endfor %}
 </ol>
