--- a/src/index.njk
+++ b/src/index.njk
@@ -1,10 +1,11 @@
 ---
 layout: layouts/home.njk
+eleventyNavigation:
+  key: Home
+  order: 0
 ---
 
-<h1>Latest 3 Posts</h1>
-
-{% set postslist = collections.posts | head(-3) %}
+{% set postslist = collections.posts | head(-5) %}
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
