--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,17 +1,83 @@
 @import './11ty.scss';
 @import './base';
 
-/* BIO sidebar */
+/* Variables */
+$sm: 600px;
+$md: 768px;
+$lg: 1000px;
 
+h1 { font-size: 1.5rem;}
+h2 { font-size: 1.3rem;}
+h3 { font-size: 1.1rem;}
+h4 { font-size: 0.9rem;}
+
+@mixin niceUnderline($color) {
+  text-decoration: none;
+  background-image: 
+      linear-gradient(to bottom, $color 95%, transparent 0%);
+      background-position: 0 95%;
+      background-repeat: repeat-x;
+      background-size: 10px 3px;
+      &:hover {
+        text-decoration: none;
+  background-image: 
+      linear-gradient(to bottom, var(--content) 95%, transparent 0%);
+      background-position: 0 95%;
+      background-repeat: repeat-x;
+      background-size: 10px 3px;
+      }
+}
+
+blockquote {
+  padding: 12px;
+  border-left: 5px solid var(--cyan); 
+}
+
+/* BIO sidebar */
 .bio {
   &__title {
-
+    display: flex;
+    img {
+      max-width: 60px;
+    }
+    h1 {
+      padding-left: 12px;
+      font-size: 18px;
+      display: inline;
+      color: var(--content);
+      a {
+        line-height: .6;
+        text-decoration: none;
+        font-weight: 400;
+      }
+      span {
+        display: block;
+        font-weight: 300;
+        font-size: 14px;
+      }
+    }
   }
+  font-size: .8rem;
+  color: #9e9e9e;
+  grid-area: bio;
+  padding-bottom: 12px;
+  @media(min-width: $sm) {
+    font-size: 1rem;
+    p {
+      max-width: 34em;
+    }
+ }
+  @media(min-width: $md) { 
+    p {
+      max-width: 20em;
+    }
+ }
 }
 
 .contacts {
   list-style: none;
   padding: 0;
+  margin: 0;
   display: flex;
   li + li { 
     margin-left: 20px;
@@ -22,12 +88,182 @@
 }
 
 .nav {
-  grid-column-start: 1;
-  grid-column-end: 2;
+  grid-area: nav;
+  margin: 12px 0 24px 0;
+  padding: 0;
+  list-style: none;
+  @media(min-width: $md) {
+    text-align: right;
+  }
+  &-item {
+    text-decoration: none;
+    display: inline-block;
+    margin-right: 1em;
+    a:hover {
+      @include niceUnderline(var(--content));
+    }
+    a[href]:not(:hover) {
+        text-decoration: none;
+    
+    }
+    &-active a {
+      @include niceUnderline(var(--cyan));
+    }
+    
+  }
 }
 
-/*  LAYOUT  */
-.outer-grid {
+
+.contacts  {
+  padding-bottom: 12px;
+  border-bottom: 1px solid #D6DCE4;
+  svg {
+    fill: var(--blueGrey);
+    width: 28px;
+    &:hover {
+      fill: var(--lightgrey);
+    }
+  }
+}
+
+.grid-wrapper {
   display: grid;
-  grid-template-columns: repeat( minmax(200px, 100%), 3fr)
+  grid-template-areas:
+  "bio"
+  "nav"
+  "content";
+  padding: 12px;
+  max-width: var(--maxWidth);
+  margin: 0 auto; 
+  @media (min-width: $md) {
+    column-gap: 2em;
+    grid-template-areas:
+    "nav nav"
+    "bio content"
+  }
+}
+
+.content {
+  display: grid; 
+  gap: 1em;
+  grid-template-columns: 1fr;
+  font-weight: 300;
+  h2, h3, h4 {
+    margin-bottom: .5rem;
+    & + p {
+      margin-top: .5rem;
+    }
+  }
+
+  @media (min-width: $md) {
+    grid-template-columns: 100%;
+    padding-top: .5em;
+  }
+  &,
+  p {
+    font-size: 16px;
+    font-size: .9rem;
+  }
+  p > a,
+  .direct-link,
+  li > a { 
+    @include niceUnderline(var(--cyan));
+    &:hover {
+      color: black;
+    }
+  }
+}
+
+/*  Posts list */
+
+.post-list { 
+  list-style: none;
+  padding-left: 0;
+  font-size: 14px;
+  font-size: 0.9rem;
+  &__item {
+    margin-bottom: 1.5em;
+    + .post-list__item {
+      padding-top: 1em;
+    }
+  }
+  &__title {
+      font-size: 32px;
+      font-size: 1.7rem;
+      margin: 0;
+  }
+  &__link {
+    text-decoration: none;
+    display: block;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  &__excerpt {
+    font-size: 20px;
+    font-size: 1.1rem;
+    margin: 0 0 1em 0;
+  }
+  &__read-more {
+    padding-bottom: 3px;
+    text-decoration: none;
+    @include niceUnderline(var(--cyan));
+   
+  }
+  @media(min-width: 1200px) {
+    padding-right: 20%;
+  }
+}
+
+
+.post {
+  &-title {
+    line-height: 1.1;
+    font-size: 30px;
+    font-size: 1.7rem;
+    border-left: 5px solid var(--cyan);
+    margin-bottom: 0;
+    padding-left: 8px;
+  }
+  &-date {
+    display: block;
+    font-size: 0.8rem;
+    color: var(--lightgrey);
+    padding: 1em 0 1em 0;
+  }
+}
+
+.page-title {
+  font-size: 30px;
+  font-size: 1.7rem;
+  padding-left: 8px;
+  border-left: 5px solid var(--cyan);
+  line-height: 1.1;
+  margin-bottom: 0;
+  &--subtitle {
+    margin-bottom: .5em;
+  }
+  &__sub-line {
+    margin: 0;
+    font-size: 16px;
+    font-size: 0.9rem;
+    font-style: italic;
+  }
+}
+ 
+
+/* Template-specific */
+
+
+.tmpl-archive {
+  .post-list {
+    &__title {
+      font-size: 24px;
+      font-size: 1.3rem;
+    }
+    &__excerpt {
+      font-size: 16px;
+      font-size: 0.9rem;
+    }
+  }
 }
