--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -23,7 +23,7 @@ body, html {
   padding: 0;
   color: var(--content);
   margin: 0;
-  font-family: 'Raleway', 'Arial', sans-serif; 
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   line-height: 1.7;
   font-size: 1.1rem;
