--- a/src/archive.njk
+++ b/src/archive.njk
@@ -1,10 +1,10 @@
 ---
 layout: layouts/base.njk
-title: Archive
+title: Posts
 templateClass: tmpl-archive
 permalink: /posts/
 eleventyNavigation:
-  key: Archive
+  key: Writing
   order: 5
 ---
 
