--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --content: #2e3542;
+  --quote: #727b8d;
   --red: #c5004a;
   --darkred: #7f0036;
   --cyan: #b2efeb;
@@ -169,6 +170,10 @@ a[href].tag:visited {
 blockquote {
   padding: 12px;
   border-left: 5px solid var(--cyan);
+  font-weight: 500;
+  font-style: italic;
+  font-size: 20px;
+  color: var(--quote);
 }
 .bio {
   font-size: 0.8rem;
@@ -472,6 +477,7 @@ blockquote {
   /* Hue Saturation Lightnesss */
   background: hsl(220, 10%, 90%);
   margin-top: 12px;
+  margin-bottom: 12px;
   padding: 20px;
   max-width: 100%;
   display: grid;
@@ -481,8 +487,10 @@ blockquote {
   img {
     width: auto;
     max-width: 100%;
+    height: 100%;
     border-radius: 10px;
     margin: 12px 0;
+    object-fit: cover;
   }
   @media (min-width: 1000px) {
     grid-template-columns: 1fr 1fr;
