--- a/src/css/main.css
+++ b/src/css/main.css
@@ -174,6 +174,7 @@ blockquote {
   font-style: italic;
   font-size: 20px;
   color: var(--quote);
+  margin: 10px;
 }
 .bio {
   font-size: 0.8rem;
@@ -454,6 +455,7 @@ blockquote {
 .tmpl-archive .post-list__excerpt {
   font-size: 16px;
   font-size: 0.9rem;
+  margin: 0;
 }
 
 .tmpl-page {
