--- a/src/css/main.css
+++ b/src/css/main.css
@@ -175,6 +175,15 @@ blockquote {
   font-size: 20px;
   color: var(--quote);
   margin: 10px;
+  margin-left: 0;
+  margin-bottom: 0;
+}
+blockquote + cite {
+  color: black;
+  padding: 6px 12px;
+  display: inline-block;
+  text-align: right;
+  background: var(--cyan);
 }
 .bio {
   font-size: 0.8rem;
@@ -429,7 +438,7 @@ blockquote {
 .post-date {
   display: block;
   font-size: 0.8rem;
-  color: var(--lightgrey);
+  color: var(--darkgray);
   padding: 0 0 1em 0;
 }
 .page-title {
@@ -456,6 +465,13 @@ blockquote {
   font-size: 16px;
   font-size: 0.9rem;
   margin: 0;
+}
+
+.tmpl-archive .intro {
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 1.6;
+  padding: 8px 0;
 }
 
 .tmpl-page {
@@ -497,4 +513,11 @@ blockquote {
   @media (min-width: 1000px) {
     grid-template-columns: 1fr 1fr;
   }
+}
+
+.post-footer {
+  font-weight: bold;
+  font-size: 16px;
+  padding: 14px;
+  background: var(--cyan);
 }
