Style changes. New post Legacy post edit

--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -1,7 +1,9 @@
 <h2 class="intro">
-  I want to make life better for my colleagues, users and improving things at
-  work by having well-formed ideas with which I can inspire others. Here, I’ll
-  share my thoughts on tech, leadership, and some personal stuff too.
+  <p>
+    Here, I share some thoughts on tech and leadership; to explore my thoughts,
+    such that I can inspire others and teams I work with...
+  </p>
+  <p>And some personal and arty stuff too!</p>
 </h2>
 
 <ol class="post-list">
