New post. Emojis. Tidy-ups

--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -1,9 +1,8 @@
 <h2 class="intro">
   <p>
-    Here, I share some thoughts on tech and leadership; to explore my thoughts,
-    such that I can inspire others and teams I work with...
+    Here, I share some thoughts on tech and leadership; to develop and share my
+    thoughts, and perhaps bring them to assist others I work with...
   </p>
-  <p>And some personal and arty stuff too!</p>
 </h2>
 
 <ol class="post-list">
