--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,6 +20,7 @@
   <body>
     <div class="grid-wrapper">
       <ul class="nav">
+        <li class="nav-item subscribe-link"><a href="https://buttondown.com/martindm">Subscribe</a></li>
         {%- for entry in collections.all | eleventyNavigation %}
           <li class="nav-item{% if entry.url == page.url %} nav-item-active{% endif %}"><a href="{{ entry.url | url }}">{{ entry.title }}</a></li>
         {%- endfor %}
