--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 title: Writing
-templateClass: tmpl-archive
+templateClass: archive-content
 permalink: /
 eleventyNavigation:
   key: Writing
