--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -1,4 +1,4 @@
-<h2 class="intro">
+<h2 class="archive-intro">
   <p>
     Here, I share some thoughts on tech and leadership; to develop and share my
     thoughts, and perhaps bring them to assist others I work with...
@@ -8,7 +8,7 @@
 <ol class="post-list">
   {% for post in postslist | reverse %}
   <li
-    class="post-list__item {% if post.url == url %} post-list-item--active{% endif %}"
+    class="post-list__item {% if post.url == url %} post-list__item--active{% endif %}"
   >
     <h2 class="post-title">
       <a href="{{ post.url | url }}" class="post-list__link">
